<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APM Data Collector</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_add_note">Add Note</string>
    <string name="title_activity_checksheet">Checksheet</string>
    <string name="title_activity_reading">ReadingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="reading_value_label">Value</string>
    <string name="reading_notes_label">Notes</string>
    <string name="reading_instructions_label">Instructions</string>
    <string name="action_mark_unavailable">Mark Unavailable</string>
    <string name="reading_reason_label">Reason for lower reading</string>
    <string name="reading_prev_value_label">Previous Value</string>

</resources>
